--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,8 @@
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.learn.iet-framework": "1.2.3",
+    "com.unity.render-pipelines.high-definition": "10.8.1",
+    "com.unity.shadergraph": "10.8.1",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
