--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.learn.iet-framework": "1.2.3",
+    "com.unity.render-pipelines.high-definition": "10.8.1",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
@@ -13,7 +14,7 @@
     "com.unity.xr.management": "4.2.0",
     "com.unity.xr.oculus": "1.11.2",
     "com.unity.xr.openxr": "1.3.1",
-    "com.unity.xr.windowsmr": "4.6.1",
+    "com.unity.xr.windowsmr": "4.6.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
